add references and download link

--- a/Combining behavioral and neurophysiological data.ipynb
+++ b/Combining behavioral and neurophysiological data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "abaee00c",
+   "id": "79407912",
    "metadata": {},
    "source": [
     "# Combining behavioral and neurophysiological data\n"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7ccbc944",
+   "id": "461b884e",
    "metadata": {},
    "source": [
     "The goal of this workshop is to introduce a way of combining neurophysiological data and behavioral observations, on recordings of human EEG in a discrimination task. "
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3e8700be",
+   "id": "b65a0507",
    "metadata": {},
    "source": [
     "## 1. Description of the experiment and data"
@@ -27,7 +27,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
-   "id": "6d6e21f9",
+   "id": "7d734004",
    "metadata": {},
    "source": [
     "In this task, participants were presented at each trial either with an image of a face or a sound, and had to report what they have perceived through key presses (left arrow=sound, right arrow=face) as fast and accuately as possible. A timeout on response time would occur two seconds after stimulus presentation. \n",
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "123b18b2",
+   "id": "e7a9b75c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7980b7d8",
+   "id": "87d691a5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,17 +176,19 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79167a7b",
+   "id": "7407b20c",
    "metadata": {},
    "source": [
     "## 2. Import and visualize data\n",
-    "In this first part we look at raw data and see how we can improve it."
+    "In this first part we look at raw data and see how we can improve it.\n",
+    "\n",
+    "First of all, you need to download the data at the [following link](https://cirrus.universite-paris-saclay.fr/s/xPP3rzEgPFTEb5R). Put it in a folder on your computer, and copy its path next to the \"my_path\" variable in the cell below."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c91e89dd",
+   "id": "2145ea34",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fca84783",
+   "id": "01c1a343",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -222,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b7d27db",
+   "id": "9867c92d",
    "metadata": {},
    "source": [
     "We can see that the data is quite messy, as it is prone to artifacts. In fact, with EEG, any small movement can appear in the signal, from blinking, to sweating, to clenching the jaw. It is necessary to remove them. Run the code below to see how this is improved."
@@ -231,7 +233,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b651ae39",
+   "id": "77767082",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +246,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6cf1f605",
+   "id": "98db44da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -267,7 +269,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3fc5d4b",
+   "id": "04eea6e6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +288,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcc3da65",
+   "id": "1aced90f",
    "metadata": {},
    "source": [
     "This is already much better. Pre-processing is a whole topic to itself, so we will not go into detail in that part, you have the whole master to learn it."
@@ -294,7 +296,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ab72be13",
+   "id": "c0d6ce51",
    "metadata": {},
    "source": [
     "## 3. Look at the behavior\n",
@@ -304,7 +306,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c51c70b7",
+   "id": "f5ae958a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -336,7 +338,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2215476",
+   "id": "05bcdabb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +354,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e558b4c4",
+   "id": "257f71db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -366,7 +368,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caabb795",
+   "id": "9ffaa593",
    "metadata": {},
    "source": [
     "We can also gain insight from the errors that people have made."
@@ -375,7 +377,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "769c9c7a",
+   "id": "12a1d6b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,7 +404,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a71ee8ed",
+   "id": "a7c6acda",
    "metadata": {},
    "source": [
     "## 4. Combining brain activity and other quantitative data: wITPC\n",
@@ -422,7 +424,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e5e24504",
+   "id": "3014b2da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -452,7 +454,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d5fca799",
+   "id": "32ebd4db",
    "metadata": {},
    "source": [
     "Have a look at the maximum and minimum of the phase, what do you notice?"
@@ -460,7 +462,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12f53606",
+   "id": "f0db4918",
    "metadata": {},
    "source": [
     "In fact, the phase is periodic: it varies between $-\\pi$ and $\\pi$, and has a periodicity of $2\\pi$, which means that $-\\pi = \\pi$, and $0=2\\pi$ etc. \n",
@@ -481,7 +483,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "322fe136",
+   "id": "2f78df1e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -497,7 +499,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54668eaa",
+   "id": "cbcaab0a",
    "metadata": {},
    "source": [
     "Let's see what that looks like!"
@@ -506,7 +508,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1e8f96d2",
+   "id": "7817f770",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -529,7 +531,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b847a443",
+   "id": "53b84883",
    "metadata": {},
    "source": [
     "You can now try to look at the different conditions separately. Do you see any difference in the wITPC for both conditions?\n",
@@ -539,7 +541,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af592950",
+   "id": "9b793ff5",
    "metadata": {},
    "source": [
     "## 5. Conclusion\n",
@@ -549,12 +551,13 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "818d77aa",
+   "cell_type": "markdown",
+   "id": "23cbb109",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## 6. References and suggested reading\n",
+    "Cohen, M. X. (2014). Analyzing neural time series data: theory and practice. Cambridge, Massachusetts: The MIT Press.\n"
+   ]
   }
  ],
  "metadata": {
